k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: k8s-training-backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: disgraceful/k8s-training:backend-level-2
        ports:
        - containerPort: 3000 # <-- this should be the port specified in your nginx conf file
